--- a/src/_h5ai/private/php/pages/info.php.pug
+++ b/src/_h5ai/private/php/pages/info.php.pug
@@ -1,7 +1,7 @@
 extends ./page.tpl.pug
 
 block init
-    - var title = `h5ai info page - v${pkg.version}`
+    - var title = `The Archives - Info page`
     - var module = 'info'
 
 block body
