--- a/src/_h5ai/public/css/lib/ext/custom.less
+++ b/src/_h5ai/public/css/lib/ext/custom.less
@@ -1,5 +1,7 @@
 #content-header, #content-footer {
-    margin: 16px;
+    text-wrap: balance;
+    font-size: 14px;
+    margin: 10px 30px;
     padding: 8px;
     color: @col-text;
 
