--- a/src/_h5ai/public/css/lib/ext/info.less
+++ b/src/_h5ai/public/css/lib/ext/info.less
@@ -51,4 +51,12 @@
             display: block;
         }
     }
+    .archive_logo {
+        margin: 0 auto;
+        width: 200px;
+
+        img {
+            display: block;
+        }
+    }
 }
