--- a/src/_h5ai/public/css/lib/view/topbar.less
+++ b/src/_h5ai/public/css/lib/view/topbar.less
@@ -69,3 +69,12 @@
         white-space: nowrap;
     }
 }
+#backlink2 {
+    display: block;
+    order: 99;
+    text-align: center;
+    height: 48px;
+}
+#topBarImage {
+    height: 100%;
+}
