--- a/src/_h5ai/public/css/lib/main/info.less
+++ b/src/_h5ai/public/css/lib/main/info.less
@@ -40,8 +40,8 @@
 
         input[type="image"] {
             border: 0;
-            width: 100px;
-            padding: 12px 48px;
+            width: 150px;
+            padding: 12px 0 12px 0;
         }
     }
 
