fix google analytics ID

--- a/src/_h5ai/private/php/pages/page.tpl.pug
+++ b/src/_h5ai/private/php/pages/page.tpl.pug
@@ -40,14 +40,14 @@ html(class='no-js', lang='en')
         meta(property="twitter:image" content="https://archive.littlelilycat.art/_h5ai/public/images/favicon/archive_logo.png")
 
         // Google tag (gtag.js)
-        script(async src="https://www.googletagmanager.com/gtag/js?id=G-4VE76F7L1J")
+        script(async src="https://www.googletagmanager.com/gtag/js?id=G-5PP6EXHB77")
         script.
             window.dataLayer = window.dataLayer || [];
             function gtag() {
                 dataLayer.push(arguments);
                 }
             gtag('js', new Date());
-            gtag('config', 'G-4VE76F7L1J');
+            gtag('config', 'G-5PP6EXHB77');
 
         <?php if (!$fallback_mode) { ?>
         script(src!='<?= $public_href; ?>js/scripts.js', data-module=module)
