--- a/src/_h5ai/private/php/pages/page.tpl.pug
+++ b/src/_h5ai/private/php/pages/page.tpl.pug
@@ -43,9 +43,7 @@ html(class='no-js', lang='en')
         script(async src="https://www.googletagmanager.com/gtag/js?id=G-5PP6EXHB77")
         script.
             window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-                }
+            function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
             gtag('config', 'G-5PP6EXHB77');
 
